--- a/00_library/stdlib06 logging/logging.conf
+++ b/00_library/stdlib06 logging/logging.conf
@@ -30,7 +30,7 @@ level=DEBUG
 formatter=simpleFormatter
 
 [formatter_simpleFormatter]
-format=%(asctime)s|%(levelname)-8s|%(filename)s|%(lineno)d|%(threadName)s|%(message)s
+format=%(name)s|%(asctime)s|%(levelname)-8s|%(filename)s|%(lineno)d|%(threadName)s|%(message)s
 datefmt=%Y/%m/%d %H:%M:%S
 
 
